[package]
name = "sysroot-creator"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = [ "blocking" ] }
flate2 = { version = "1.0" }
url = "2"
ar = "0.8.0"
tar = "0.4"
xz2 = "0.1"
debcontrol = "0.1.1"
deb-version = "0.1.1"

log = "0"
simple_logger = "1"
toml = "0.5"
md5 = "0.7"
serde = { version = "1.0", features = ["derive" ] }
clap = "2.33"
