
<package format="3">
  <name>example_app</name>
  <version>0.0.1</version>
  <description>
    Example app with ros2
  </description>
  <maintainer email="windel@windel.nl">Windel Bouwman</maintainer>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <license>BSD</license>

  <author email="windel@windel.nl">Windel Bouwman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
