<?xml version="1.0"?>
<package format="2">
  <name>test13</name>
  <version>0.0.0</version>
  <description>ROS1 demo node</description>

  <maintainer email="windel@todo.todo">windel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
